--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>project</title>
-    <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
 <body>
-<img class="wallpaper" src="./picture/wallpaper.jpg">
-<p class="galaxy">Galaxy</p>
-<div class="words">
-<p class="catalog">Catalog</p>
-<p class="cart">Cart</p>
-<p class="profile">Profile</p>
-</div>
-
- 
-<h1>Welcome!</h1>
-
-
-    </body>
-    </html>
+    <div class="container">
+        <div class="header">
+            <div class="logo">Galaxy</div>
+            <nav>
+                <div class="nazrin">Catalog</div>
+                <div class="nazrin">Cart</div>
+                <div class="nazrin">Profile</div>
+            </nav>
+        </div>
+        <div class="text">
+            Welcome!
+        </div>
+    </div>
+</body>
+</html>
